# Event_Manager

./: README.md  run.txt
client/: CMakeLists.txt
client/resources/: dark_theme.qss  resources.qrc
client/src/: EventDialog.cpp  EventDialog.h  EventDialog.ui  EventModel.cpp  EventModel.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  WebSocketClient.cpp  WebSocketClient.h  main.cpp
docker/: Dockerfile.server  docker-compose.yml
scripts/: build_all.sh  deploy.sh  install_deps_mac.sh
server/: CMakeLists.txt
server/src/: AuthManager.cpp  AuthManager.h  Database.cpp  Database.h  EventServer.cpp  EventServer.h  ReminderManager.cpp  ReminderManager.h  main.cpp
shared/: Event.cpp  Event.h  Protocol.cpp  Protocol.h  User.cpp  User.h
